Fix Gap in Navbar

--- a/css/style.css
+++ b/css/style.css
@@ -39,6 +39,9 @@ p {
   background-color: #0E0834;
   transition: all 0.3s ease;
 }
+.navbar-collapse {
+  gap: 1rem;
+}
 .navbar-nav {
   gap: 1rem;
 }
