--- a/sass/_navbar.scss
+++ b/sass/_navbar.scss
@@ -3,6 +3,10 @@
     background-color: $primary;
     transition: all 0.3s ease;
 
+    &-collapse {
+        gap:1rem;
+    }
+
     &-nav {
         gap: 1rem;
     }
